--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.08MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇦 加拿大-1.01MB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.76MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇩🇪 德国-2.54MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇯🇵 日本-3.30MB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-3.04MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-3.03MB/s(Youtube:不良林), server: 169.197.142.187, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-1.24MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-4.26MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.55MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-469.7KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-9.91MB/s(Youtube:不良林), server: 20.205.233.12, port: 443, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.27MB/s(Youtube:不良林), server: 167.88.61.175, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-1.24MB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-162.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: 172.99.188.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 172.99.188.71, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 172.99.188.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: 172.99.188.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-2.25MB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-469.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-162.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-469.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-162.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-469.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-162.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-469.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-162.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-469.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-162.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-469.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-162.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-469.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-162.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
