--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-3.21MB/s(Youtube:不良林), server: 168.138.38.51, port: 11188, type: vmess, uuid: 92a8da3c-f87f-4294-b40b-631c8d1d4b3b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 168.138.38.51}}
-  - {name: 🇺🇸 美国-2.31MB/s(Youtube:不良林), server: ben2.kuoyao.top, port: 38799, type: vmess, uuid: 5b89808f-236a-4889-ffd3-6c01a86da194, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /kuoyao, ws-headers: {Host: ben2.kuoyao.top}}
+  - {name: 🇨🇳 中国-343.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.08MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
   - {name: 🇯🇵 日本-1.87MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇩🇪 德国-1.32MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: 172.99.188.71, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-2.18MB/s(Youtube:不良林), server: 172.99.188.71, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇯🇵 日本-2.69MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-20.67MB/s(Youtube:不良林), server: 20.2.71.124, port: 80, type: vmess, uuid: bc4167fa-7394-3869-b9c0-67ae18b40f2f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.2.71.124}}
   - {name: 🇺🇸 美国-3.34MB/s(Youtube:不良林), server: singapore.alures.xyz, port: 3389, type: vmess, uuid: a3129f57-2ee1-4937-aff0-112ebd658067, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: singapore.alures.xyz}}
   - {name: 🇺🇸 美国-466.4KB/s(Youtube:不良林), server: 54.173.95.207, port: 30716, type: vmess, uuid: ad56f761-61fd-4e86-80fd-7705af94007d, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 54.173.95.207}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.87MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-20.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-466.4KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.87MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-20.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-466.4KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.87MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-20.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-466.4KB/s(Youtube:不良林)
@@ -73,11 +73,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.87MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-20.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-466.4KB/s(Youtube:不良林)
@@ -88,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.87MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-20.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-466.4KB/s(Youtube:不良林)
@@ -104,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.87MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-20.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-466.4KB/s(Youtube:不良林)
@@ -129,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.87MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-20.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-466.4KB/s(Youtube:不良林)
