--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: 167.88.61.175, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇯🇵 日本-2.15MB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇨🇳 中国-613.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇩🇪 德国-1.32MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇯🇵 日本-1.87MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 63.209.33.52, port: 44204, type: vmess, uuid: 7673d8bd-cd3d-4893-d6f1-a72d4dbc3ca8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /234, ws-headers: {Host: 63.209.33.52}}
-  - {name: 🇺🇸 美国-536.1KB/s(Youtube:不良林), server: ben2.kuoyao.top, port: 38799, type: vmess, uuid: 5b89808f-236a-4889-ffd3-6c01a86da194, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /kuoyao, ws-headers: {Host: ben2.kuoyao.top}}
+  - {name: 挪威-1.84MB/s(Youtube:不良林), server: 51.13.38.115, port: 51611, type: vmess, uuid: 297f4b35-a321-44b9-8a90-2d486d1153c1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /fed, ws-headers: {Host: 51.13.38.115}}
+  - {name: 🇯🇵 日本-1.28MB/s(Youtube:不良林), server: 85.208.108.93, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: 172.99.188.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-1.37MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 卢森堡-8.76MB/s(Youtube:不良林), server: 91.243.81.248, port: 443, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.66MB/s(Youtube:不良林), server: emby.metalink.cf, port: 8096, type: vmess, uuid: b8f9b514-4835-493b-e9a0-c135bbeb764b, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.39MB/s(Youtube:不良林), server: 63.209.33.52, port: 44204, type: vmess, uuid: 7673d8bd-cd3d-4893-d6f1-a72d4dbc3ca8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /234, ws-headers: {Host: 63.209.33.52}}
+  - {name: 🇺🇸 美国-2.74MB/s(Youtube:不良林), server: ben2.kuoyao.top, port: 38799, type: vmess, uuid: 5b89808f-236a-4889-ffd3-6c01a86da194, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /kuoyao, ws-headers: {Host: ben2.kuoyao.top}}
   - {name: 🇺🇸 美国-5.70MB/s(Youtube:不良林), server: 20.2.71.124, port: 80, type: vmess, uuid: bc4167fa-7394-3869-b9c0-67ae18b40f2f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.2.71.124}}
-  - {name: 🇺🇸 美国-466.4KB/s(Youtube:不良林), server: 54.173.95.207, port: 30716, type: vmess, uuid: ad56f761-61fd-4e86-80fd-7705af94007d, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 54.173.95.207}}
   - {name: 🇨🇦 加拿大-1.14MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 挪威-1.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-613.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-536.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
+      - 卢森堡-8.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-466.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 挪威-1.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-613.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-536.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
+      - 卢森堡-8.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-466.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 挪威-1.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-613.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-536.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
+      - 卢森堡-8.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-466.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 挪威-1.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-613.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-536.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
+      - 卢森堡-8.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-466.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 挪威-1.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-613.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-536.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
+      - 卢森堡-8.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-466.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 挪威-1.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-613.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-536.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
+      - 卢森堡-8.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-466.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 挪威-1.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-613.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-536.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
+      - 卢森堡-8.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-466.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
